# ItWorksOnYourMachineToo

./: .flake8  .gitignore  .lexworkseverywhere.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINKEDIN_POST.md  README.fr.md  README.md  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
ItWorksOnYourMachineToo/: __init__.py
ItWorksOnYourMachineToo/adapters/: base_adapter.py
ItWorksOnYourMachineToo/adapters/linux/: linux_adapter.py
ItWorksOnYourMachineToo/adapters/macos/: __init__.py  macos_adapter.py
ItWorksOnYourMachineToo/adapters/windows/: windows_adapter.py
ItWorksOnYourMachineToo/cli/: doctor.py  main.py
ItWorksOnYourMachineToo/core/: config.py  i18n.py  profiler.py
ItWorksOnYourMachineToo/core/contracts/: adapter.py  factory.py
ItWorksOnYourMachineToo/core/engine/: engine.py
ItWorksOnYourMachineToo/core/planner/: engine.py
ItWorksOnYourMachineToo/core/security/: integrity.py  license.py
ItWorksOnYourMachineToo/core/utils/: logging_utils.py  performance.py  security_utils.py
ItWorksOnYourMachineToo/core/validator/: engine.py
ItWorksOnYourMachineToo/dependencies/: __init__.py  dependency_manager.py
ItWorksOnYourMachineToo/docs/: architecture.md  contributor_guide.md  philosophy.md  user_guide.md
ItWorksOnYourMachineToo/exporters/: __init__.py  ansible.py  apt.py  brewfile.py  devcontainer.py  docker_compose.py  nix.py  winget.py
ItWorksOnYourMachineToo/tests/: test_cli_basic.py  test_cli_doctor_json.py  test_export_artifacts.py
lexworkseverywhere/: __init__.py
lexworkseverywhere/adapters/: base_adapter.py
lexworkseverywhere/adapters/linux/: __init__.py  linux_adapter.py
lexworkseverywhere/adapters/macos/: macos_adapter.py
lexworkseverywhere/adapters/windows/: __init__.py  windows_adapter.py
lexworkseverywhere/cli/: doctor.py  main.py
lexworkseverywhere/core/: i18n.py  profiler.py
lexworkseverywhere/core/contracts/: adapter.py  factory.py
lexworkseverywhere/core/engine/: engine.py
lexworkseverywhere/core/planner/: engine.py
lexworkseverywhere/core/security/: integrity.py  license.py
lexworkseverywhere/core/utils/: logging_utils.py  performance.py  security_utils.py
lexworkseverywhere/dependencies/: __init__.py  dependency_manager.py
lexworkseverywhere/docs/: architecture.md  contributor_guide.md  philosophy.md  user_guide.md
lexworkseverywhere/tests/: test_cli_basic.py  test_cli_doctor_json.py  test_export_artifacts.py
scripts/: audit_memory.py  benchmark_planner.py  validate_cross_os.py  verify_distribution.py
tests/cli/: test_cli_capture.py  test_cli_init.py  test_cli_list.py
tests/core/: test_adapter_install_suggestion_i18n.py  test_config.py  test_engine.py  test_engine_build_command.py  test_extended.py  test_i18n.py  test_new_languages.py  test_planner.py  test_planner_cache.py  test_validator.py  test_validator_propose_fix.py
tests/export/: test_export_ansible.py  test_export_apt.py  test_export_brewfile.py  test_export_devcontainer.py  test_export_docker_compose.py  test_export_nix.py  test_export_winget.py  test_exporters_registry.py
tests/extreme/: test_chaos_engine.py  test_fuzz_planner.py  test_path_properties.py
tests/final/: test_os_compliance.py
tests/industrial/: test_concurrency.py  test_universal_support.py
(+1 files in other folders)
