[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "itworksonyourmachinetoo"
version = "2.1.0"
authors = [
    {name = "Abdoullah Ndao", email = "abdoullahaljersi@gmail.com"},
]
description = "ItWorksOnYourMachineToo: Cross-platform development environment manager that ensures code works everywhere."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
    "psutil>=5.8.0",
    "rich>=10.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
]

[project.scripts]
itworks = "ItWorksOnYourMachineToo.cli.main:main"
iwym = "ItWorksOnYourMachineToo.cli.main:main"

[project.urls]
Homepage = "https://github.com/utachicodes/ItWorksOnYourMachineToo"
Repository = "https://github.com/utachicodes/ItWorksOnYourMachineToo"
"Bug Reports" = "https://github.com/utachicodes/ItWorksOnYourMachineToo/issues"
"Source" = "https://github.com/utachicodes/ItWorksOnYourMachineToo"

[tool.setuptools.packages.find]
where = ["."]
include = ["ItWorksOnYourMachineToo*"]

[tool.setuptools.package-data]
ItWorksOnYourMachineToo = ["**/*.json", "**/*.yaml", "**/*.yml", "**/*.txt", "**/*.md"]
